--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -937,9 +937,7 @@
   
   
 <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  
   <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
-    
     <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 25px;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
@@ -949,7 +947,6 @@
         (2026 Freshman Spring Season)
       </p>
     </div>
-
     <div style="background: #ffffff; padding: 25px; border-left: 6px solid #0c2340; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #f1f1f1; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
@@ -959,7 +956,6 @@
         Performance metrics and scoring data will be updated post-competition. Current focus is on <b>stabilizing ball-striking</b> and <b>minimizing short-game variance</b> under tournament conditions.
       </p>
     </div>
-
     <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #2b6cb0; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>
@@ -969,7 +965,6 @@
         Course-specific strategies and <b>internal qualifying metrics</b> will be updated systematically. Data on competitive course setups and <b>performance transparency</b> are maintained to align with UTSA team standards and professional preparation.
       </p>
     </div>
-
     <div style="background: #fffdfa; padding: 25px; border-left: 6px solid #806600; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f9f0e3; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="3"></circle></svg>
@@ -979,7 +974,138 @@
         Following the integration of <b>Bryan Gathright’s technical protocols</b>, longitudinal data on swing mechanics and competitive scoring will be tracked throughout the Spring season. Preparation for <b>NCAA Regional qualification</b> remains the primary performance target.
       </p>
     </div>
+  </div>
+</div>
 
+<div class="roster-standings-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="margin-bottom: 25px;">
+    <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
+      UTSA TEAM ROSTER STANDINGS 
+      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
+    </h3>
+  </div>
+  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 35px;">
+      <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Team Rank (Avg)</span>
+        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">#1 (72.0)</span>
+        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Scoreboard Adj: 71.5</div>
+        <div style="display: inline-block; font-size: 12px; color: #806600; margin-top: 8px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 2px 12px; border-radius: 20px;">STATUS: Fall Cumulative</div>
+      </div>
+      <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Scoring Power</span>
+        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">7 Under Par</span>
+        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Out of 12 Rounds</div>
+        <div style="display: inline-block; font-size: 12px; color: #2b6cb0; margin-top: 8px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 2px 12px; border-radius: 20px;">STATUS: Spring Qualifiers</div>
+      </div>
+      <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Academic Discipline</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
+        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Fall 2025 Semester</div>
+        <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 8px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 2px 12px; border-radius: 20px;">METRIC: Fall Finalized</div>
+      </div>
+    </div>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-bottom: 30px;">
+      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+          Competitive Lineup & Team Contribution
+        </h4>
+        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+          Focusing on <b>maximizing scoring contribution</b> for the UTSA Travel Squad. Current metrics are prioritized to maintain competitive consistency within the lineup and support team-scoring objectives for the 2026 Spring season.
+        </p>
+      </div>
+      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><line x1="22" y1="12" x2="18" y2="12"></line><line x1="6" y1="12" x2="2" y2="12"></line><line x1="12" y1="6" x2="12" y2="2"></line><line x1="12" y1="22" x2="12" y2="18"></line></svg>
+          Performance Targets & Metric Calibration
+        </h4>
+        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+          While maintaining <b>stability in Par 3 and Par 5 scoring efficiency</b>, current technical focus is directed toward <b>optimizing Par 4 saving rates</b>. Strategic training protocols are being implemented to minimize scoring variance and enhance scramble recovery metrics under competitive conditions.
+        </p>
+      </div>
+      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+          Statistical Reliability
+        </h4>
+        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+          Focusing on a <b>100% Counting Score rate</b> to maintain consistent data contribution. This objective ensures that every competitive round serves as a reliable asset toward the UTSA team scoring aggregate.
+        </p>
+      </div>
+      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+          Post-Round Analysis & Training Alignment
+        </h4>
+        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+          Competitive logs are maintained to <b>identify performance gaps</b> and define technical objectives. Each round’s data is used to <b>calibrate practice protocols</b>, ensuring systematic improvement throughout the Spring season.
+        </p>
+      </div>
+    </div>
+    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px;">
+      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 2026</span>
+    </div>
+  </div>
+</div>
+
+<div class="advanced-analysis-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="margin-bottom: 25px;">
+    <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
+      ADVANCED COMPETITIVE ANALYSIS 
+      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
+    </h3>
+  </div>
+  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 35px;">
+      <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">237-96-11</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 70.1%</div>
+        <div style="display: inline-block; font-size: 13px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: Fall Finalized / Spring Update Pending</div>
+      </div>
+      <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">100% Counting Score</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Every Round Contributed</div>
+        <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">METRIC: Spring Data Collection In Progress</div>
+      </div>
+    </div>
+    <div style="margin-top: 40px;">
+      <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Spring Season Objectives:</b>
+      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+        <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="22" y1="12" x2="18" y2="12"></line><line x1="6" y1="12" x2="2" y2="12"></line><line x1="12" y1="6" x2="12" y2="2"></line><line x1="12" y1="22" x2="12" y2="18"></line></svg>
+          Strategic Course Management
+        </h4>
+        <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
+          Current focus is the <b>seamless integration of Bryan Gathright’s technical directives</b> into competitive decision-making. High priority is placed on internalizing swing-plane adjustments to <b>minimize unforced errors</b> and improve proximity metrics on Par-4 holes for stabilized scoring.
+        </p>
+      </div>
+      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #546e7a; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+        <h4 style="margin: 0 0 10px 0; color: #455a64; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
+          Scoring Availability & Contribution
+        </h4>
+        <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
+          Targeting a <b>100% Counting Score rate</b> across all tournament rounds as a primary technical objective. Prioritizing consistent data contribution to the overall UTSA team score.
+        </p>
+      </div>
+      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+        <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
+          Statistical Progression & Learning Curve
+        </h4>
+        <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
+          As a freshman, emphasis is placed on leveraging <b>post-event analytics</b> to identify developmental benchmarks. <b>Strokes Gained (SG)</b> and field-adjusted metrics are systematically reviewed to align training intensity with competitive requirements, ensuring a consistent seasonal progression.
+        </p>
+      </div>
+    </div>
+    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 20px;">
+      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 2026 (Pre-Spring Season)</span>
+    </div>
   </div>
 </div>
 
