--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -204,7 +204,7 @@
     }
   </script>
 
-  
+    
     
 <div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box;">
 
@@ -937,7 +937,7 @@
   
   
 <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
+  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px 15px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
     <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 25px;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
@@ -1228,6 +1228,7 @@
 
 </div>
 
+  
 
 <div class="gallery-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 15px;">
@@ -1305,12 +1306,12 @@
           <body>
             <div id="close" onclick="window.close()">×</div>
             <div id="prev" class="nav-btn" onclick="move(-1)">❮</div>
-            <img id="mainImg" src="${images[index]}">
+            <img id="mainImg" src="\${imgArray[idx]}">
             <div id="next" class="nav-btn" onclick="move(1)">❯</div>
-            <div class="counter" id="countDisplay">${index + 1} / ${images.length}</div>
+            <div class="counter" id="countDisplay">\${idx + 1} / \${imgArray.length}</div>
             <script>
-              let idx = ${index};
-              const imgArray = ${JSON.stringify(images)};
+              let idx = \${index};
+              const imgArray = \${JSON.stringify(images)};
               function move(step) {
                 idx = (idx + step + imgArray.length) % imgArray.length;
                 const img = document.getElementById('mainImg');
@@ -1332,7 +1333,6 @@
       `);
     }
   </script>
-</div>
 
   <div style="text-align: center; padding-top: 20px; margin-top: 40px; border-top: 1px solid #f1f1f1;">
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
