--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -936,9 +936,9 @@
   </div>
   
   
-<div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px 0; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
-    <div style="border-bottom: 2px solid #f1f1f1; padding: 0 25px 20px; margin-bottom: 25px;">
+<div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
+    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 25px;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
         PERFORMANCE & STRATEGY ANALYSIS
@@ -947,37 +947,36 @@
         (2026 Freshman Spring Season)
       </p>
     </div>
-    <div style="margin: 0 25px;">
-      <div style="background: #ffffff; padding: 25px; border-left: 6px solid #0c2340; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #f1f1f1; border-left-width: 6px;">
-        <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-          Performance Stability & Metrics
-        </h4>
-        <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-          Performance metrics and scoring data will be updated post-competition. Current focus is on <b>stabilizing ball-striking</b> and <b>minimizing short-game variance</b> under tournament conditions.
-        </p>
-      </div>
-      <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
-        <h4 style="margin: 0 0 12px 0; color: #2b6cb0; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>
-          Course Analysis & Team Readiness
-        </h4>
-        <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-          Course-specific strategies and <b>internal qualifying metrics</b> will be updated systematically. Data on competitive course setups and <b>performance transparency</b> are maintained to align with UTSA team standards and professional preparation.
-        </p>
-      </div>
-      <div style="background: #fffdfa; padding: 25px; border-left: 6px solid #806600; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f9f0e3; border-left-width: 6px;">
-        <h4 style="margin: 0 0 12px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="3"></circle></svg>
-          Advanced Coaching & Development
-        </h4>
-        <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-          Following the integration of <b>Bryan Gathright’s technical protocols</b>, longitudinal data on swing mechanics and competitive scoring will be tracked throughout the Spring season. Preparation for <b>NCAA Regional qualification</b> remains the primary performance target.
-        </p>
-      </div>
+    <div style="background: #ffffff; padding: 25px; border-left: 6px solid #0c2340; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #f1f1f1; border-left-width: 6px;">
+      <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+        Performance Stability & Metrics
+      </h4>
+      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        Performance metrics and scoring data will be updated post-competition. Current focus is on <b>stabilizing ball-striking</b> and <b>minimizing short-game variance</b> under tournament conditions.
+      </p>
+    </div>
+    <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
+      <h4 style="margin: 0 0 12px 0; color: #2b6cb0; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>
+        Course Analysis & Team Readiness
+      </h4>
+      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        Course-specific strategies and <b>internal qualifying metrics</b> will be updated systematically. Data on competitive course setups and <b>performance transparency</b> are maintained to align with UTSA team standards and professional preparation.
+      </p>
+    </div>
+    <div style="background: #fffdfa; padding: 25px; border-left: 6px solid #806600; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f9f0e3; border-left-width: 6px;">
+      <h4 style="margin: 0 0 12px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="3"></circle></svg>
+        Advanced Coaching & Development
+      </h4>
+      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        Following the integration of <b>Bryan Gathright’s technical protocols</b>, longitudinal data on swing mechanics and competitive scoring will be tracked throughout the Spring season. Preparation for <b>NCAA Regional qualification</b> remains the primary performance target.
+      </p>
     </div>
   </div>
 </div>
+  
 
 <div class="roster-standings-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="margin-bottom: 25px;">
